--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.13.1",
+    "@mantine/form": "^7.13.2",
     "@mantine/hooks": "^7.13.1",
     "@mantinex/mantine-logo": "^1.0.1",
     "firebase": "^10.14.0",
