--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/form": "^7.13.2",
     "@mantine/hooks": "^7.13.1",
     "@mantinex/mantine-logo": "^1.0.1",
+    "@tabler/icons-react": "^3.19.0",
     "firebase": "^10.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
