--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ VITE_FIREBASE_STORAGE_BUCKET=easemind-71adb.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=1007866876151
 VITE_FIREBASE_APP_ID=1:1007866876151:web:2fdfa3a7bfcf69d6be43f2
 VITE_FIREBASE_MEASUREMENT_ID=G-FX9DKRQYC0
-VITE_FIREBASE_URL=https://easemind-71adb-default-rtdb.asia-southeast1.firebasedatabase.app/
+VITE_FIREBASE_URL=https://easemind-71adb-default-rtdb.asia-southeast1.firebasedatabase.app
